# advent2021

./: Cargo.toml  README.md
.github/workflows/: rust.yml
dev/bench/: data.js
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day13.rs  day14.rs
v/day01/: day01.v  day01_test.v
v/day02/: day02.v  day02_test.v
